# LegendOfCube-Game

./: .gitignore  CMakeLists.txt  LegendOfCube-Win.sln  LegendOfCube.sln  README.md  ad  plugins.cfg
LegendOfCube/: Game1.cs  LegendOfCube.csproj  Program.cs
LegendOfCube/Content/: Content.mgcb
LegendOfCube/LegendOfCube/: Game1.cs  LegendOfCube.csproj  Program.cs
LegendOfCube/LegendOfCube/Engine/: AIComponent.cs  AISystem.cs  AnimationSystem.cs  AssetCollection.cs  AudioSystem.cs  Camera.cs  CameraSystem.cs  ComponentMask.cs  ContentCollection.cs  DebugState.cs  Entity.cs  EntityBuilder.cs  EventSystem.cs  GameObjectTemplate.cs  GameObjectTemplateCollection.cs  GameObjectTemplates.cs  GameScreen.cs  GameStats.cs  GameplaySystem.cs  GlobalConfig.cs  Highscore.cs  ILevelFactory.cs  IniFile.cs  InputData.cs  InputSystem.cs  LegendOfCubeGame.cs  Level.cs  MenuAudioSystem.cs  MenuInputSystem.cs  MenuScreen.cs  ModelData.cs  MovementSystem.cs  OBBRenderer.cs  OldLegendOfCubeGame.cs  PhysicsSystem.cs  PlayerCubeState.cs  Program.cs  Properties.cs  RenderSystem.cs  Screen.cs  (+4 more)
LegendOfCube/LegendOfCube/Level/: ConceptLevel.cs
LegendOfCube/LegendOfCubeContent/: LegendOfCubeContent.contentproj  barrel.fbx  cube_1x1g_wood.FBX  cube_plain.FBX
LegendOfCube/LegendOfCubePipeline/: LegendOfCubePipeline.csproj  StandardEffectModelProcessor.cs
LegendOfCube/LegendOfCubeTests/: IntersectionTestsTests.cs  LegendOfCubeTests.csproj  PropertiesTests.cs
LegendOfCube/Properties/: AssemblyInfo.cs
assets/: this_is_not_an_asset.txt
src/: Main.cpp
(+155 files in other folders)
